--- a/python-school/functions/fun2-errors-and-testing.ipynb
+++ b/python-school/functions/fun2-errors-and-testing.ipynb
@@ -21,10 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "2uM_3S83D9p9"
-   },
+   "metadata": {},
    "source": [
     "## Unforeseen situations\n",
     "\n",
@@ -42,10 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "zwNdlmJfHo55"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "Translating everything in Python terms, we can ask ourselves if during the function execution, when we find an unforeseen situation, is it possible to:\n",
@@ -63,16 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 141
-    },
-    "colab_type": "code",
-    "id": "Y5gUglTvJegE",
-    "outputId": "52a9dd62-e852-45e6-fb61-75af719c4963"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -131,10 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "27WwfcdGYBgU"
-   },
+   "metadata": {},
    "source": [
     "## Check with the return\n",
     "\n",
@@ -150,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -175,10 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "DGmYOPOiVVSL"
-   },
+   "metadata": {},
    "source": [
     "## Exceptions\n",
     "\n",
@@ -189,10 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "PqIyLDxULTRE"
-   },
+   "metadata": {},
    "source": [
     "To improve on our previous attempt, we can use _exceptions_. To tell Python to **interrupt** the program execution in a given point, we can insert the instruction `raise` like this:\n",
     "\n",
@@ -211,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "raises-exception"
@@ -246,26 +223,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "JifNcpcGMN1p"
-   },
+   "metadata": {},
    "source": [
     "We see the program got interrupted before arriving to mix step (inside the function), and it didn't even arrived to party (which is outside the function). Let's try now to call the function with enough ingredients in the sideboard:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 124
-    },
-    "colab_type": "code",
-    "id": "nUSiXiguMCWb",
-    "outputId": "4a37af25-226f-4331-ef57-7debb2664047"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -297,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,10 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "N4td4QXyapHU"
-   },
+   "metadata": {},
    "source": [
     "## assert\n",
     "\n",
@@ -427,16 +390,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 53
-    },
-    "colab_type": "code",
-    "id": "tma2Ru2Gc28E",
-    "outputId": "7cc74a1e-81a6-4d71-8865-67210243f3e2"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -470,10 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "jIZeJGG9dNgR"
-   },
+   "metadata": {},
    "source": [
     "How could we improve it? Let's look at the `assert` command, which must be written by following it with a boolean condition.\n",
     "\n",
@@ -482,16 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 53
-    },
-    "colab_type": "code",
-    "id": "k7DN2SI4daLM",
-    "outputId": "15dbb4e4-e9ec-4c5c-9c35-71cdd6f9ef36"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -510,17 +454,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "J8cZ3gbJdr60"
-   },
+   "metadata": {},
    "source": [
     "Instead,  `assert False` completely blocks program execution, by launching an exception of type  `AssertionError` (Note how `\"after\"` is not printed):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "raises-exception"
@@ -554,21 +495,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "I1O2Qr4Nd6Kn"
-   },
+   "metadata": {},
    "source": [
     "To improve the previous program, we might use `assert` like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "h8lLo60dctPT",
     "tags": [
      "raises-exception"
     ]
@@ -621,10 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "itT2wsNpcsUi"
-   },
+   "metadata": {},
    "source": [
     "### When to use assert?\n",
     "\n",
@@ -637,11 +569,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "m0p7LXfbfvZF",
     "tags": [
      "raises-exception"
     ]
@@ -717,10 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "KzyNzgRdgUgM"
-   },
+   "metadata": {},
    "source": [
     "### Testing with asserts\n",
     "\n",
@@ -742,12 +668,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "RAcNr9zDgd1y"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def my_sum(x, y):\n",
@@ -757,22 +679,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "ISlL7iHLgjwb"
-   },
+   "metadata": {},
    "source": [
     "We expect that `my_sum(2, 3)` gives `5`. We can write in Python this expectation by using an `assert`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "6t1v78uFgr6T"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert my_sum(2, 3) == 5"
@@ -780,10 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "9Es6xXfIg4Ex"
-   },
+   "metadata": {},
    "source": [
     "If `my_sum` is correctly implemented:\n",
     "\n",
@@ -814,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,8 +817,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
