--- a/python-school/functions/fun4-lists-sol.ipynb
+++ b/python-school/functions/fun4-lists-sol.ipynb
@@ -23,12 +23,12 @@
    "source": [
     "### Exercise - printwords\n",
     "\n",
-    "✪ Write a function `printwords` that PRINTS all the words in a phrase"
+    "✪ Write a function `printwords` that PRINTS all the words in a sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "80e08dc9",
    "metadata": {
     "tags": [
@@ -36,17 +36,7 @@
      "hide-cell"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ciao\n",
-      "come\n",
-      "stai?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def printwords(f):\n",
     "    words = f.split()\n",
@@ -59,7 +49,17 @@
    "execution_count": null,
    "id": "a50f82e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciao\n",
+      "come\n",
+      "stai?\n"
+     ]
+    }
+   ],
    "source": [
     "phrase = \"ciao come stai?\"\n",
     "printwords(phrase)"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d08d9513",
    "metadata": {
     "tags": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "56e2b1bd",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "78049e01",
    "metadata": {
     "tags": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "51956d14",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "343b1989",
    "metadata": {
     "tags": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2312280d",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4c0dab7c",
    "metadata": {
     "tags": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f68916c9",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "387de2ab",
    "metadata": {
     "tags": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f8959f54",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "86c2238d",
    "metadata": {
     "tags": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c4b2c44b",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "26.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8c4770cd",
    "metadata": {
     "tags": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b60495cf",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        " 'Party X changed immigration policy, immigrants are stealing our jobs']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e06d94c4",
    "metadata": {
     "tags": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4abe798a",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b5c0057c",
    "metadata": {
     "tags": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "55104a07",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cfd1f284",
    "metadata": {
     "tags": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3f070800",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fa190efd",
    "metadata": {
     "tags": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d32b7335",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "8f809601",
    "metadata": {
     "tags": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "89a1b617",
    "metadata": {},
    "outputs": [],
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "47ff1929",
    "metadata": {
     "tags": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "63103303",
    "metadata": {},
    "outputs": [],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "c8d46dc6",
    "metadata": {
     "tags": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "32d98d70",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e741d807",
    "metadata": {
     "tags": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "87797aa4",
    "metadata": {},
    "outputs": [],
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "5afd69f3",
    "metadata": {
     "tags": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b6707fb5",
    "metadata": {},
    "outputs": [],
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "15b578f6",
    "metadata": {
     "tags": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "97930894",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "319eb98e",
    "metadata": {
     "tags": [
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "7ae96daa",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "17ba2f0d",
    "metadata": {
     "tags": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "0a7f2a13",
    "metadata": {},
    "outputs": [],
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "36e196e2",
    "metadata": {
     "tags": [
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "bac4b9df",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "f1150755",
    "metadata": {
     "tags": [
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b9295288",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1180,7 @@
        "['hello', 'hello', 'world', 'world', 'python', 'python']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e63e04cb",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "8f97ed3f",
    "metadata": {
     "tags": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "ab68a0f4",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "a5f24095",
    "metadata": {
     "tags": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a572828e",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "25fd09e5",
    "metadata": {
     "tags": [
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "8682db4d",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
        "['a', 'b', 'a', 'a', 'b']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "710c6fbc",
    "metadata": {},
    "outputs": [],
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "e951d1c1",
    "metadata": {
     "tags": [
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "3ec9f38b",
    "metadata": {},
    "outputs": [
@@ -1428,7 +1428,7 @@
        "[1, 2, 3, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "28358df8",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "fc576fd3",
    "metadata": {
     "tags": [
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "894c3e52",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
        "1600"
       ]
      },
-     "execution_count": 74,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "3c62bccd",
    "metadata": {},
    "outputs": [],
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "64f91bdc",
    "metadata": {
     "tags": [
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "e856bf8a",
    "metadata": {},
    "outputs": [],
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "c58a345f",
    "metadata": {
     "tags": [
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "0018faa9",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1627,7 @@
        "['a', 'x', 'b', 'y', 'c', 'z']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "41828e51",
    "metadata": {},
    "outputs": [],
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "abc17dfc",
    "metadata": {
     "tags": [
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "62fbf41b",
    "metadata": {},
    "outputs": [],
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "1914d438",
    "metadata": {
     "tags": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "0990d300",
    "metadata": {},
    "outputs": [],
@@ -1832,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "e9378c41",
    "metadata": {
     "tags": [
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "0c3048ac",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1860,7 @@
        "['z', 'c', 's', 'z', 'a', 'w', 'z', 'b']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "9eddd11e",
    "metadata": {},
    "outputs": [],
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2f9102f5",
    "metadata": {},
    "outputs": [
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "557fa727",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "7e76da5e",
    "metadata": {
     "tags": [
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "ac52887f",
    "metadata": {},
    "outputs": [
@@ -2052,7 +2052,7 @@
        "(375, 20, 0)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "3d2664eb",
    "metadata": {},
    "outputs": [],
@@ -2092,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "83880779",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
        "4"
       ]
      },
-     "execution_count": 37,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "fb197a2e",
    "metadata": {},
    "outputs": [
@@ -2131,7 +2131,7 @@
        "57"
       ]
      },
-     "execution_count": 38,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2155,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "a5b0f094",
    "metadata": {
     "tags": [
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "502043e8",
    "metadata": {},
    "outputs": [
@@ -2193,7 +2193,7 @@
        "([3, 7, 5], [2, 0], [0])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "d0911469",
    "metadata": {},
    "outputs": [],
@@ -2261,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "049800fb",
    "metadata": {
     "tags": [
@@ -2284,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "1626de8f",
    "metadata": {},
    "outputs": [],
@@ -2379,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "555269f5",
    "metadata": {
     "tags": [
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "006e44be",
    "metadata": {},
    "outputs": [
@@ -2422,7 +2422,7 @@
        "([1, 2, 4], [3, 7, 0, 0], [1, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "e960ea97",
    "metadata": {},
    "outputs": [],
@@ -2479,7 +2479,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2492,8 +2492,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
