--- a/python-school/functions/fun4-lists.ipynb
+++ b/python-school/functions/fun4-lists.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "### Exercise - printwords\n",
     "\n",
-    "✪ Write a function `printwords` that PRINTS all the words in a phrase"
+    "✪ Write a function `printwords` that PRINTS all the words in a sentence"
    ]
   },
   {
@@ -31,7 +31,17 @@
    "execution_count": null,
    "id": "a50f82e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciao\n",
+      "come\n",
+      "stai?\n"
+     ]
+    }
+   ],
    "source": [
     "phrase = \"ciao come stai?\"\n",
     "printwords(phrase)"
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "56e2b1bd",
    "metadata": {},
    "outputs": [
@@ -80,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "51956d14",
    "metadata": {},
    "outputs": [
@@ -90,7 +100,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2312280d",
    "metadata": {},
    "outputs": [
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f68916c9",
    "metadata": {},
    "outputs": [
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f8959f54",
    "metadata": {},
    "outputs": [
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c4b2c44b",
    "metadata": {},
    "outputs": [
@@ -228,7 +238,7 @@
        "26.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b60495cf",
    "metadata": {},
    "outputs": [
@@ -299,7 +309,7 @@
        " 'Party X changed immigration policy, immigrants are stealing our jobs']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4abe798a",
    "metadata": {},
    "outputs": [],
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "55104a07",
    "metadata": {},
    "outputs": [],
@@ -426,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3f070800",
    "metadata": {},
    "outputs": [],
@@ -454,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d32b7335",
    "metadata": {},
    "outputs": [],
@@ -496,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "89a1b617",
    "metadata": {},
    "outputs": [],
@@ -528,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "63103303",
    "metadata": {},
    "outputs": [],
@@ -557,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "32d98d70",
    "metadata": {},
    "outputs": [],
@@ -599,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "87797aa4",
    "metadata": {},
    "outputs": [],
@@ -623,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b6707fb5",
    "metadata": {},
    "outputs": [],
@@ -649,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "97930894",
    "metadata": {},
    "outputs": [],
@@ -680,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "7ae96daa",
    "metadata": {},
    "outputs": [],
@@ -706,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "0a7f2a13",
    "metadata": {},
    "outputs": [],
@@ -733,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "bac4b9df",
    "metadata": {},
    "outputs": [],
@@ -758,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b9295288",
    "metadata": {},
    "outputs": [
@@ -768,7 +778,7 @@
        "['hello', 'hello', 'world', 'world', 'python', 'python']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e63e04cb",
    "metadata": {},
    "outputs": [],
@@ -809,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "ab68a0f4",
    "metadata": {},
    "outputs": [],
@@ -838,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a572828e",
    "metadata": {},
    "outputs": [],
@@ -864,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "8682db4d",
    "metadata": {},
    "outputs": [
@@ -874,7 +884,7 @@
        "['a', 'b', 'a', 'a', 'b']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "710c6fbc",
    "metadata": {},
    "outputs": [],
@@ -924,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "3ec9f38b",
    "metadata": {},
    "outputs": [
@@ -934,7 +944,7 @@
        "[1, 2, 3, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "28358df8",
    "metadata": {},
    "outputs": [],
@@ -979,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "894c3e52",
    "metadata": {},
    "outputs": [
@@ -989,7 +999,7 @@
        "1600"
       ]
      },
-     "execution_count": 74,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "3c62bccd",
    "metadata": {},
    "outputs": [],
@@ -1033,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "e856bf8a",
    "metadata": {},
    "outputs": [],
@@ -1059,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "0018faa9",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1079,7 @@
        "['a', 'x', 'b', 'y', 'c', 'z']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "41828e51",
    "metadata": {},
    "outputs": [],
@@ -1107,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "62fbf41b",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "0990d300",
    "metadata": {},
    "outputs": [],
@@ -1230,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "0c3048ac",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1250,7 @@
        "['z', 'c', 's', 'z', 'a', 'w', 'z', 'b']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "9eddd11e",
    "metadata": {},
    "outputs": [],
@@ -1331,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2f9102f5",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "557fa727",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "ac52887f",
    "metadata": {},
    "outputs": [
@@ -1408,7 +1418,7 @@
        "(375, 20, 0)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "3d2664eb",
    "metadata": {},
    "outputs": [],
@@ -1448,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "83880779",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1468,7 @@
        "4"
       ]
      },
-     "execution_count": 37,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "fb197a2e",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1497,7 @@
        "57"
       ]
      },
-     "execution_count": 38,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "502043e8",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1531,7 @@
        "([3, 7, 5], [2, 0], [0])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "d0911469",
    "metadata": {},
    "outputs": [],
@@ -1589,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "1626de8f",
    "metadata": {},
    "outputs": [],
@@ -1684,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "006e44be",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1704,7 @@
        "([1, 2, 4], [3, 7, 0, 0], [1, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "e960ea97",
    "metadata": {},
    "outputs": [],
@@ -1751,7 +1761,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1764,8 +1774,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
