--- a/python-school/data_files/1-lines.ipynb
+++ b/python-school/data_files/1-lines.ipynb
@@ -16,10 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "fC_te77v5bPE"
-   },
+   "metadata": {},
    "source": [
     "## Line files\n",
     "\n",
@@ -48,21 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "-XsMLCyU5bPH",
-    "outputId": "824ecd67-35e8-4b79-bde5-ddf7f70334f4"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -74,17 +58,14 @@
     }
    ],
    "source": [
-    "with open(\"data/people-simple.txt\", encoding=\"utf-8\") as f:\n",
-    "    line = f.readline()\n",
+    "with open(\"data/people-simple.txt\", encoding=\"utf-8\") as file:\n",
+    "    line = file.readline()\n",
     "    print(line)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "C0eSCHzw5bPZ"
-   },
+   "metadata": {},
    "source": [
     "What happened? Let's examine the first rows:\n",
     "\n",
@@ -95,7 +76,7 @@
     "The command\n",
     "\n",
     "```python\n",
-    "open('data/people-simple.txt', encoding='utf-8')\n",
+    "open(\"data/people-simple.txt\", encoding=\"utf-8\")\n",
     "```\n",
     "\n",
     "allows us to open the text file by telling Python the file path `'people-simple.txt'` and the encoding in which it was written (`encoding='utf-8'`). "
@@ -107,9 +88,17 @@
    "source": [
     "### The encoding\n",
     "\n",
-    "The encoding depends on the operating system and on the editor used to write the file. When we open a file, Python is not capable to figure out the encoding, and if we do not specify anything Python might open the file assuming an encoding different from the original. As a result, if we omit the encoding (or we put a wrong one) we might end up seeing weird characters (like little squares instead of accented letters).\n",
+    "Files on a computer are just a bunch of zeros and ones.\n",
+    "Text files are no different, so what allows any program to interpret these zeros and ones into text is what's called the file encoding.\n",
+    "Python being a program like any other, it needs to know with what encoding a text file was written to interpret it correctly.\n",
     "\n",
-    "In general, when you open a file, try not specifying any encoding, by default Python assumes it's `utf-8` which is the most common one. If it doesn't work, you should try others. For example for files written in southern Europe with Windows you might check `encoding='latin-1'`. If you open a file written elsewhere, you might need other encodings. For more in-depth information, you can read [Dive into Python - Chapter 4 - Strings](https://diveintopython3.problemsolving.io/strings.html), and [Dive into Python - Chapter 11 - File](https://diveintopython3.problemsolving.io/files.html)."
+    "Most of the time though, you don't need to worry about it.\n",
+    "When you open a file, first try not specifying any encoding.\n",
+    "By default, Python assumes it's `utf-8`, which is the most common one.\n",
+    "If it doesn't work, then you can try others.\n",
+    "For example for files written in southern Europe with Windows you might try `encoding='latin-1'`.\n",
+    "If you open a file written elsewhere, you might need other encodings.\n",
+    "For more in-depth information, you can read [Dive into Python - Chapter 4 - Strings](https://diveintopython3.problemsolving.io/strings.html), and [Dive into Python - Chapter 11 - File](https://diveintopython3.problemsolving.io/files.html)."
    ]
   },
   {
@@ -121,17 +110,32 @@
     "The `with` defines a block with instructions inside:\n",
     "\n",
     "```python\n",
-    "with open('data/people-simple.txt', encoding='utf-8') as f:\n",
+    "with open(\"data/people-simple.txt\", encoding=\"utf-8\") as f:\n",
     "    line = f.readline()\n",
     "    print(line)\n",
     "```\n",
     "\n",
     "`with` is used to create a *context* in which to execute the indented block of code that follows it.\n",
-    "The context here is simply that a file is open, and can be operated on through the `f` variable.\n",
-    "**Importantly, when you're out of the indented block -- which means that the context \"the file is open\" ends -- the file... gets closed.**\n",
-    "\n",
+    "When we go back to the normal indentation level, we leave this context block.\n",
+    "The context here is simply that a file is open, and that you can do stuff with it through the variable called `f`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```{admonition} Question\n",
-    "Then, before running the following cell, try to guess what happens when we try reading another line with `f`.\n",
+    "When we are out of this context, what happens then to the file and to the variable `f`?\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Question\n",
+    "Let's now see this in practice.\n",
+    "Before running the following cell, try to guess what happens when we try reading another line with `f`.\n",
     "```"
    ]
   },
@@ -146,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "f.readline()"
+    "file.readline()"
    ]
   },
   {
@@ -175,10 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "en84Abg_5bPb"
-   },
+   "metadata": {},
    "source": [
     "### Reading in the file\n",
     "\n",
@@ -200,20 +201,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "wzyIGFfP5bPd"
-   },
+   "metadata": {},
    "source": [
     "**✪ 1.1 EXERCISE**: Try to rewrite here the block we've just seen, but this time printing the first two lines. Rewrite the code with the fingers, not with copy-paste! Pay attention to correct indentation with spaces in the block."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "0zsZD7-N5bPo"
-   },
+   "metadata": {},
    "source": [
     "**✪ 1.2 EXERCISE**: you might be wondering what exactly is that `f`, and what exactly the method `readline` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
     "\n",
@@ -235,10 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "I53T_-LV5bPx"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "First we put the content of the first line into the variable `line`, now we might put it in a variable with a more meaningful name, like `name`. Also, we can directly read the next row into the variable `surname` and then print the concatenation of both:\n"
@@ -246,21 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "nK3hZrCq5bP0",
-    "outputId": "49e2a028-ba09-4d96-be97-43a08ef3686b"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -273,39 +252,23 @@
     }
    ],
    "source": [
-    "with open(\"data/people-simple.txt\") as f:\n",
-    "    name = f.readline()\n",
-    "    surname = f.readline()\n",
+    "with open(\"data/people-simple.txt\") as file:\n",
+    "    name = file.readline()\n",
+    "    surname = file.readline()\n",
     "    print(f\"{name} {surname}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7UwUBQnc5bP-"
-   },
+   "metadata": {},
    "source": [
     "**PROBLEM !** The printing puts a weird carriage return. Why is that? If you remember, first we said that `readline` reads the line content in a string adding to the end also the special newline character. To eliminate it, you can use the command `rstrip()`: \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "cNvkN5BD5bQB",
-    "outputId": "d9dd006e-6bd9-4671-c98c-3af68cce2dc7"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -316,18 +279,15 @@
     }
    ],
    "source": [
-    "with open(\"data/people-simple.txt\") as f:\n",
-    "    name = f.readline().rstrip()\n",
-    "    surname = f.readline().rstrip()\n",
+    "with open(\"data/people-simple.txt\") as file:\n",
+    "    name = file.readline().rstrip()\n",
+    "    surname = file.readline().rstrip()\n",
     "    print(f\"{name} {surname}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "1XWpXow25bQM"
-   },
+   "metadata": {},
    "source": [
     "**✪ 1.3 EXERCISE**: Again, rewrite the block above in the cell below, and execute the cell with Control+Enter.\n",
     "\n",
@@ -336,17 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     }
-    },
-    "colab_type": "code",
-    "id": "cMnM_Ywm5bQP"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -357,39 +308,23 @@
     }
    ],
    "source": [
-    "with open(\"data/people-simple.txt\") as f:\n",
-    "    name = f.readline().rstrip()\n",
-    "    surname = f.readline().rstrip()\n",
+    "with open(\"data/people-simple.txt\") as file:\n",
+    "    name = file.readline().rstrip()\n",
+    "    surname = file.readline().rstrip()\n",
     "    print(f\"{name} {surname}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "O7vruQTu5bQb"
-   },
+   "metadata": {},
    "source": [
     "Very good, we have the first line ! Now we can read all the lines in sequence. To this end, we can use a `while` cycle:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "dXZBiWN-5bQh",
-    "outputId": "607b53ee-8c4d-48cc-dc06-c8d6c0996223"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -402,21 +337,18 @@
     }
    ],
    "source": [
-    "with open(\"data/people-simple.txt\") as f:\n",
-    "    line = f.readline()\n",
+    "with open(\"data/people-simple.txt\") as file:\n",
+    "    line = file.readline()\n",
     "    while line != \"\":\n",
     "        name = line.rstrip()\n",
-    "        surname = f.readline().rstrip()\n",
+    "        surname = file.readline().rstrip()\n",
     "        print(f\"{name} {surname}\")\n",
-    "        line = f.readline()"
+    "        line = file.readline()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Gs1Fthi-5bQr"
-   },
+   "metadata": {},
    "source": [
     "What did we do? First, we added a `while` cycle in a new block\n",
     "\n",
@@ -454,10 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "z2RxmnlK5bQu"
-   },
+   "metadata": {},
    "source": [
     "**✪✪ 1.4 EXERCISE**: We just presented the approach above to make things explicit. However, there are two more idiomatic ways to iterate over lines which involve a `for` loop. Try to rewrite the code above, this time using a `for` loop.\n",
     "\n",
@@ -482,12 +411,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/people-simple-new.txt\", \"w\") as f:\n",
-    "    f.write(\"\")"
+    "with open(\"data/people-simple-new.txt\", \"w\") as file:\n",
+    "    file.write(\"\")"
    ]
   },
   {
@@ -500,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -512,8 +441,8 @@
     }
    ],
    "source": [
-    "with open(\"data/people-simple-new.txt\", \"r\") as f:\n",
-    "    print(f.read())"
+    "with open(\"data/people-simple-new.txt\", \"r\") as file:\n",
+    "    print(file.read())"
    ]
   },
   {
@@ -539,10 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "6pP7nWFc5bQ4"
-   },
+   "metadata": {},
    "source": [
     "## Exercises - `people-complex` line file\n",
     "\n",
@@ -570,10 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "c76qOu-25bQ7"
-   },
+   "metadata": {},
    "source": [
     "```{hint}\n",
     "Each line is clearly split into two parts. Find the method you can use on a line to separate the line into these two parts. Then it'll be easy to extract the part you're interested in.\n",
@@ -582,20 +505,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "KVA0FPut5bRe"
-   },
+   "metadata": {},
    "source": [
     "**✪ 1.5 EXERCISE**: Write here the solution of the exercise 'People complex'. Use either a `while` or a `for` loop, whichever you feel more comfortable with."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Q_F0X5jm5bRo"
-   },
+   "metadata": {},
    "source": [
     "## Exercise -  `immersione-in-python-toc` line file\n",
     "\n",
@@ -663,17 +580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     }
-    },
-    "colab_type": "code",
-    "id": "XWlxnhpX5bRy"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = '5'"
@@ -681,21 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "GdJd09mZ5bR_",
-    "outputId": "dc19c940-e1af-4c84-aa60-012cfb985133"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -703,7 +598,7 @@
        "'5'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,21 +609,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "nETKnztF5bSF",
-    "outputId": "118522fe-186c-452e-9218-223508605154"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -736,7 +618,7 @@
        "5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,10 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "wwfLN6lv5bSQ"
-   },
+   "metadata": {},
    "source": [
     "```{warning}\n",
     "`int(x)` returns a value, and never modifies the argument `x`!  \n",
@@ -759,31 +638,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "w06zsF1a5bSS"
-   },
+   "metadata": {},
    "source": [
     "**HINT 2**: To substitute a substring in a string, you can use the method `.replace`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "sGPUddlf5bST",
-    "outputId": "4af45183-e44d-4fad-a1ba-16c6722c62ce"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -791,7 +654,7 @@
        "'abHELLOe'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,10 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7OBEbHya5bSd"
-   },
+   "metadata": {},
    "source": [
     "**HINT 3**: while there is only one sequence to substitute, `replace` is fine, but if we had a million of horrible sequences like `&gt;`, `&#62;`, `&x3e;`, what should we do? As good data cleaners, we recognize these are [HTML escape sequences](https://corsidia.com/materia/web-design/caratterispecialihtml), so we could use  methods specific to sequences like [html.escape](https://docs.python.org/3/library/html.html#html.unescape). Try it instead of `replace` and check if it works!\n",
     "\n",
@@ -820,31 +680,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "m2scPeP15bSe"
-   },
+   "metadata": {},
    "source": [
     "**HINT 4**: To write _n_ copies of a character, use `*` like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "0mOU41SC5bSf",
-    "outputId": "74391ce6-fef1-4d9e-a630-804af033f3fd"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -852,7 +696,7 @@
        "'bbbb'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,10 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "58yyJFaf5bSu"
-   },
+   "metadata": {},
    "source": [
     "**IMPLEMENTATION**: Write here the solution for the line file `immersione-in-python-toc.txt`.\n"
    ]
@@ -881,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -894,8 +735,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
