--- a/python-school/data_files/2-csv.ipynb
+++ b/python-school/data_files/2-csv.ipynb
@@ -9,10 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "47Jg7yaZ5bSy"
-   },
+   "metadata": {},
    "source": [
     "There can be various formats for tabular data, among which you surely know Excel  (`.xls` or `.xslx`). Unfortunately, if you want to programmatically process data, you should better avoid them and prefer if possible the CSV format, literally 'Comma Separated Value'. Why? Excel format is very complex and may hide several things which have nothing to do with the raw data:\n",
     "\n",
@@ -74,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,9 +121,9 @@
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
     "    # we create an object 'my_reader' which will take rows from the file\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "\n",
     "    # 'my_reader' is an object considered 'iterable', that is,\n",
     "    # if used in a 'for' will produce a sequence of rows from csv\n",
@@ -149,13 +146,13 @@
     "As already did for files with lines before, we open the file in a `with` block:\n",
     "\n",
     "```python\n",
-    "with open('data/example-1.csv', newline='') as f:\n",
+    "with open('data/example-1.csv', newline='') as file:\n",
     "```\n",
     "\n",
     "Once the file is open, in the row \n",
     "\n",
     "```python\n",
-    "    my_reader = csv.reader(f, delimiter=',')\n",
+    "    my_reader = csv.reader(file, delimiter=',')\n",
     "```\n",
     "\n",
     "we ask to `csv` module to create a reader object  called `my_reader` for our file, telling Python that comma is the delimiter for fields.\n",
@@ -199,20 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_csv.reader object at 0x770a282d1af0>\n"
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/example-1.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 2\u001b[0m     my_reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(\u001b[43mf\u001b[49m, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(my_reader)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
      ]
     }
    ],
    "source": [
-    "with open(\"data/example-1.csv\", newline=\"\") as f:\n",
-    "    my_reader = csv.reader(f, delimiter=\",\")\n",
+    "with open(\"data/example-1.csv\", newline=\"\") as file:\n",
+    "    my_reader = csv.reader(file, delimiter=\",\")\n",
     "    print(my_reader)"
    ]
   },
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -347,10 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -365,8 +364,8 @@
     }
    ],
    "source": [
-    "with open('data/example-1.csv', newline='') as f:    \n",
-    "    my_reader = csv.DictReader(f)   # Notice we now used DictReader\n",
+    "with open('data/example-1.csv', newline='') as file:    \n",
+    "    my_reader = csv.DictReader(file)   # Notice we now used DictReader\n",
     "    for d in my_reader:\n",
     "        print(d)"
    ]
@@ -393,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,10 +456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -517,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +552,7 @@
        "  'Unità di misura': 'µg/mc'}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +615,7 @@
        " ('Monte Gaza', 'Ozono'): 99.0858310626703}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,10 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "WbO-GSrX5bSz"
-   },
+   "metadata": {},
    "source": [
     "## Exercise - botteghe storiche \n",
     "\n",
@@ -844,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +860,7 @@
        " ('BAZAR', 11)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,10 +888,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "enrich(rank_categories(stopwords))                "
@@ -905,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +969,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -990,8 +982,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
