--- a/python-school/dataframes/1-basics.ipynb
+++ b/python-school/dataframes/1-basics.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb38eed2",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b8957768",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "└┘"
       ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e60b7bf0",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "└────────────┴─────────────┴───────┴──────┴───┴─────────────┴────────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "25568534",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6e82ead0",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        " 'sources']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4d7b09d5",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "(17145, 30)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "39cbd29e",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1b753800",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "└───────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "da3d2ab6",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "└───────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c7774781",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "└───────────────────┘"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a782b744",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "└──────────────────────────────┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c424191a",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "372ee15f",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fb835762",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴───────────────┴───────────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "136d41ca",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e13b5710",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1134,7 @@
        "└──────────────┘"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,11 +1183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c348a746",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1217,7 +1215,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 20,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1fde7d07",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1258,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,11 +1289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ea89e51e",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1325,7 +1321,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 22,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d62e3253",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1394,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 23,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "38ba0787",
    "metadata": {},
    "outputs": [
@@ -1465,7 +1461,7 @@
        "└────────────┴───────────┴───────┴──────┴───┴──────────────┴────────────┴────────────┴─────────────┘"
       ]
      },
-     "execution_count": 24,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2c1f87a9",
    "metadata": {},
    "outputs": [
@@ -1529,7 +1525,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 25,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,11 +1558,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "26ee6091",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1595,7 +1589,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴─────────┴────────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 26,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0108206c",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1650,7 @@
        "└────────────┴─────────┴───────┴──────┴───┴───────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 27,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,11 +1691,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "c2f2d672",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1740,7 +1732,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 29,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "5d6c1233",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1794,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴────────────────┴────────────┴────────────┴──────────────┘"
       ]
      },
-     "execution_count": 30,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ff3ecec9",
    "metadata": {
     "tags": [
@@ -1890,7 +1882,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 32,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ec39a0dd",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "86d941ff",
    "metadata": {
     "tags": [
@@ -1965,7 +1957,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 35,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1988,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e8e9a1d7",
    "metadata": {},
    "outputs": [
@@ -2039,7 +2031,7 @@
        "└─────────┴────────┴────────┴───────────────┴───┴──────────┴───────────────┴──────────────┴────────┘"
       ]
      },
-     "execution_count": 37,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2057,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2078,8 +2070,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
