--- a/python-school/functions/fun5-tuples.ipynb
+++ b/python-school/functions/fun5-tuples.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d09815aa",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4d32b425",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "(('a', 'b', 'c', 'd', 'e', 'e', 'f'), ('a', 'b', 'c', 'd'))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "343d0957",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        " ('g2', 'g2', 'a4', 'a4', 'a4', 'a4', 's1', 'p3', 'p3', 'p3'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c9a8e50c",
    "metadata": {},
    "outputs": [],
@@ -127,8 +127,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
