--- a/python-school/mixed-structures/2-mixed-structures.ipynb
+++ b/python-school/mixed-structures/2-mixed-structures.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "22b8edb4",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "78ec8d60",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "f9660051",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "a7efc78b",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "374e8904",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "080e3306",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "f67c2c80",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[76.0, 73.5, 80.5]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "76ae66b7",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "b42e9ab2",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "d34a8e59",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "7458b7bd",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "3e494ce4",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        " ['Totals', 17, 21, 16]]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "823f0101",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "50ae2eaa",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "300e8ee6",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "  'year': 2011}]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "e087b3f5",
    "metadata": {},
    "outputs": [],
@@ -559,8 +559,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
